[package]
name = "chuck"
version = "0.1.0"
edition = "2021"
description = "Interactive commit selection for upstream contributions"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
git2 = "0.18"
crossterm = "0.27"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
